# nexis-clicker

./: .env.example  .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
nexis_clicker/: README.md  __main__.py
nexis_scraper/: __main__.py
